--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==4.1
 djangorestframework==3.13.1
 idna==3.3
 multidict==6.0.2
+python-decouple==3.8
 pytz==2022.2.1
 requests==2.28.1
 sqlparse==0.4.2
