--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
 aiohttp==3.7.4.post0
-asgiref==3.5.2
+asgiref==3.8.1
 async-timeout==3.0.1
 attrs==22.1.0
 certifi==2022.6.15
 chardet==4.0.0
 charset-normalizer==2.1.1
-discord.py==2.0.0
-Django==4.1
-djangorestframework==3.13.1
+discord.py==2.4.0
+Django==5.1
+djangorestframework==3.15.2
 idna==3.3
 multidict==6.0.2
+mypy==1.11.1
+mypy-extensions==1.0.0
 python-decouple==3.8
 pytz==2022.2.1
 requests==2.28.1
 sqlparse==0.4.2
-typing_extensions==4.3.0
+tomli==2.0.1
+typing_extensions==4.12.2
 urllib3==1.26.12
 whitenoise==6.2.0
 yarl==1.8.1
