--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ multidict==6.0.2
 mypy==1.11.1
 mypy-extensions==1.0.0
 python-decouple==3.8
+python-dotenv==1.0.1
 pytz==2022.2.1
 requests==2.28.1
 sqlparse==0.4.2
