--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,6 @@
 [mypy]
-python_version = 1.11.1
+python_version = 3.10
 ignore_missing_imports = True
+
+[mypy-*.migrations.*]
+ignore_errors = True
