--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,112 @@
-aiohttp==3.7.4.post0
-asgiref==3.8.1
-async-timeout==3.0.1
-attrs==22.1.0
+abch_tree_sitter==1.1.3
+abch_tree_sitter_solidity==1.2.2
+aiofiles==0.8.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+anyio==3.7.0
+asgiref==3.4.1
+asttokens==2.4.1
+async-timeout==4.0.2
+attrs==21.4.0
+base58==2.1.1
+bitarray==2.9.2
+Brotli==1.1.0
 certifi==2022.6.15
-chardet==4.0.0
-charset-normalizer==2.1.1
-discord.py==2.4.0
-Django==5.1
-djangorestframework==3.15.2
+charset-normalizer==2.0.10
+click==8.1.3
+contourpy==1.2.1
+cycler==0.12.1
+cytoolz==0.11.2
+decorator==5.1.1
+Django==3.2.9
+eth-abi==4.2.1
+eth-account==0.8.0
+eth-hash==0.5.2
+eth-keyfile==0.6.1
+eth-keys==0.4.0
+eth-rlp==0.3.0
+eth-typing==3.5.2
+eth-utils==2.3.1
+eth-wake==4.8.0
+exceptiongroup==1.1.1
+executing==2.0.1
+fonttools==4.53.0
+frozenlist==1.2.0
+graphviz==0.19.2
+h11==0.14.0
+hexbytes==0.2.2
 idna==3.3
-multidict==6.0.2
-mypy==1.11.1
+iniconfig==2.0.0
+intervaltree==3.1.0
+ipdb==0.13.13
+ipfshttpclient==0.8.0a2
+ipython==8.20.0
+jedi==0.19.1
+jschema-to-python==1.2.3
+jsonpickle==3.0.2
+jsonschema==3.2.0
+kiwisolver==1.4.5
+lazy-import==0.2.2
+lru-dict==1.1.7
+markdown-it-py==3.0.0
+matplotlib==3.9.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+multiaddr==0.0.9
+multidict==5.2.0
+mutagen==1.47.0
+mypy==1.10.0
 mypy-extensions==1.0.0
-python-decouple==3.8
-python-dotenv==1.0.1
-pytz==2022.2.1
-requests==2.28.1
+netaddr==0.8.0
+networkx==2.8.8
+numpy==2.0.0
+packaging==23.2
+parsimonious==0.9.0
+parso==0.8.3
+pathvalidate==2.5.2
+pbr==6.0.0
+pexpect==4.9.0
+pillow==10.4.0
+pluggy==1.3.0
+prompt-toolkit==3.0.43
+protobuf==3.19.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycryptodome==3.12.0
+pycryptodomex==3.20.0
+pydantic==1.10.8
+pyfiglet==0.8.post1
+Pygments==2.17.2
+pyparsing==3.1.2
+pyrsistent==0.18.1
+pytest==7.4.4
+python-dateutil==2.9.0.post0
+pytz==2021.3
+regex==2023.12.25
+requests==2.32.3
+rich==13.7.0
+rich-click==1.7.3
+rlp==3.0.0
+sarif-om==1.0.4
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
+stack-data==0.6.3
+starlette==0.27.0
+tblib==1.7.0
+toml==0.10.2
 tomli==2.0.1
-typing_extensions==4.12.2
-urllib3==1.26.12
-whitenoise==6.2.0
-yarl==1.8.1
+tomli_w==1.0.0
+toolz==0.11.2
+traitlets==5.14.1
+types-requests==2.32.0.20240712
+typing_extensions==4.6.2
+urllib3==2.2.2
+varint==1.0.2
+watchdog==2.2.1
+wcwidth==0.2.13
+websocket-client==1.7.0
+websockets==12.0
+yarl==1.7.2
+yt-dlp==2024.7.25
