--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ discord.py==2.4.0
 Django==5.1.2
 django-cors-headers==4.5.0
 django-dotenv==1.4.2
+django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 frozenlist==1.4.1
